ACS-11995 Fix CodeQL critical and high alerts